--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="the-base/style1.css">
+        <link rel="stylesheet" href="the-base/style1ALL.css">
         <script type="text/javascript" src="the-base/script.js"></script>
         <title>Le HUB de projets</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +31,7 @@
 
         <div class="body1">
             <h1 style="position: relative; top: -82px; letter-spacing: -.02em; height: 217px; margin-top: 11px;margin-bottom: 32px;">HUB</h1>
-            <div id="myMenu" style="position: relative; top: -15px;">
+            <div class="myMenu" id="myMenu" style="position: relative; top: -15px; display: grid; gap: 1.25rem;">
                 <article class="tab-----content displaynone">
                     <div class="tagdiv">
                         <div class="tagele"><h4>TAG NAME</h4></div>
@@ -171,6 +172,13 @@
                         </div>
                     </div>
                 </article>
+
+                <div>
+                    <div id="btnContainer">
+                        <button class="btn activebt" onclick="listView()"><i class="fa fa-bars"></i> List</button> 
+                        <button class="btn" onclick="gridView()"><i class="fa fa-th-large"></i> Grid</button>
+                      </div>
+                </div>
             </div>
         </div>
     </body>
