--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="background-image" style="background-image: url(the-base/images/background-images.jpg);"></div>
         <div class="background-color"></div>
         
-            <div class="tab" id="navbar">
+            <div class="tab anime-welcomeBLAM" id="navbar">
                 <div class="tab-2">
                     <div class="tab-2-btn">
                         <button class="tablinks" onclick="openCity(event, 'tabcontent')" id="defaultOpen">HUB</button>
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-        <div class="body1">
+        <div class="body1 anime-welcomeBLAM">
             <h1 style="position: relative; top: -82px; letter-spacing: -.02em; height: 217px; margin-top: 11px;margin-bottom: 32px;">HUB</h1>
             <div class="bar-option-but">
                 <div class="bar-option dropdown">
@@ -48,7 +48,7 @@
                 <div class="bar-option dropdown" style="margin-left: 10px;">
                     <button class="dropbtn"><img class="iconnn" src="the-base\images\icons\section-sort.png" alt="">Trier<i class="fa fa-caret-down"></i></button>
                     <div class="btnContainer dropdown-content" id="btnContainer">
-                        <button class="btn btnhover" onclick="sortTable()">Sort</button>
+                        <button class="btn btnhover" onclick="sortTable()">Alphabétique</button>
                     </div>
                 </div>
             </div>
